--- a/SpringCloud-Server/pom.xml
+++ b/SpringCloud-Server/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.xujian</groupId>
-    <artifactId>SpringCloud-Server</artifactId>
+    <artifactId>spring-cloud-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SpringCloud-Server</name>
+    <name>spring-cloud-server</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
