--- a/SpringCloud-SpringBoot/pom.xml
+++ b/SpringCloud-SpringBoot/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <!--指定父项目-->
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -17,7 +16,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version/>
+        <java.version>1.8</java.version>
         <thymeleaf/>
     </properties>
 
