--- a/SpringCloud-SpringBoot/pom.xml
+++ b/SpringCloud-SpringBoot/pom.xml
@@ -59,6 +59,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- 缓存：Spring Data Redis 的启动器 -->
