--- a/SpringCloud-RabbitMQ-Sender/pom.xml
+++ b/SpringCloud-RabbitMQ-Sender/pom.xml
@@ -16,5 +16,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
