--- a/SpringCloud-SpringBoot/pom.xml
+++ b/SpringCloud-SpringBoot/pom.xml
@@ -62,18 +62,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- 缓存：Spring Data Redis 的启动器 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>2.9.0</version>
-        </dependency>
-
-
         <!--定时器 start-->
         <!-- 添加 Scheduled 坐标, Quartz也需要 -->
         <dependency>
@@ -99,6 +87,13 @@
             <artifactId>spring-tx</artifactId>
         </dependency>
         <!--定时器 end-->
+
+        <!--websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.1.6.RELEASE</version>
+        </dependency>
 
     </dependencies>
 </project>
