--- a/SpringCloud-SpringBoot/pom.xml
+++ b/SpringCloud-SpringBoot/pom.xml
@@ -8,7 +8,7 @@
         <groupId>com.xujian</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>spring-boot</artifactId>
+    <artifactId>spring-cloud-springboot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
