--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <module>SpringCloud-Database</module>
         <module>SpringCloud-RocketMQ</module>
         <module>SpringCloud-Socket</module>
+        <module>SpringCloud-Netty-Client</module>
+        <module>SpringCloud-Netty-Server</module>
     </modules>
 
     <properties>
@@ -54,6 +56,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.28.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -62,10 +71,27 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.jenkins-ci.plugins</groupId>-->
-<!--                <artifactId>plugin</artifactId>-->
-<!--            </plugin>-->
+
+            <!--https://blog.einverne.info/post/2018/07/maven-plugins.html-->
+            <!--管理规则, 避免不同的人员采用不同的版本...-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.4.1</version>
+                <executions>
+                    <execution>
+                        <id>enforce</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireUpperBoundDeps/>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
