--- a/SpringCloud-Netty-Client/pom.xml
+++ b/SpringCloud-Netty-Client/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-transport</artifactId>
+            <artifactId>netty-all</artifactId>
             <version>4.1.36.Final</version>
             <scope>compile</scope>
         </dependency>
