--- a/SpringCloud-SpringBoot/pom.xml
+++ b/SpringCloud-SpringBoot/pom.xml
@@ -95,5 +95,11 @@
             <version>2.1.6.RELEASE</version>
         </dependency>
 
+        <!--邮件 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
