--- a/SpringCloud-Redis/pom.xml
+++ b/SpringCloud-Redis/pom.xml
@@ -32,6 +32,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.41</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
