--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,17 @@
         <module>SpringCloud-Netty-HelloWorld</module>
         <module>SpringCloud-Netty-ProtoBuf</module>
         <module>SpringCloud-Feign</module>
+        <module>config/config-client</module>
+        <module>config/config-server</module>
         <module>service/hello-service-api</module>
         <module>service/hello-service</module>
         <module>service/eureka-server</module>
+        <module>service/eureka-server2</module>
         <module>feign/feign-consumer</module>
         <module>hystrix/hystrix-ribbon-consumer</module>
-        <module>config/config-client</module>
-        <module>config/config-server</module>
+        <module>ribbon/ribbon-consumer</module>
+        <module>zull/api-gateway</module>
+        <module>websocket/websocket-start</module>
     </modules>
 
     <!--全局通用的版本号定义-->
