--- a/service/eureka-server/src/main/resources/application.yml
+++ b/service/eureka-server/src/main/resources/application.yml
@@ -1,14 +1,21 @@
 eureka:
-    client:
-        fetch-registry: false
-        register-with-eureka: false
-        service-url:
-            # 这里多定义的地址，回去查找，找不到会报错：连接失败
-            defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
-    server:
-        enable-self-preservation: false
+  client:
+    fetch-registry: false
+    register-with-eureka: false
+    service-url:
+      # 这里多定义的地址，回去查找，找不到会报错：连接失败
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
+  server:
+    enable-self-preservation: false
 server:
-    port: 8761
+  port: 8761
 spring:
-    application:
-        name: eureka-server
+  application:
+    name: eureka-server
+
+logging:
+  level:
+    com:
+      netflix:
+        eureka: OFF
+        discovery: OFF
