--- a/oauth/oauth-server/src/main/resources/application.yml
+++ b/oauth/oauth-server/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
     url: jdbc:mysql://localhost:3306/oauth2?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 12345678
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    timeout: 10000
+    database: 0
+    password:
