--- a/SpringCloud-Swagger/src/main/resources/application.yml
+++ b/SpringCloud-Swagger/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 swagger:
-  enable: true
+  production: false
+  basic:
+    enable: true
+    username: xujian
+    password: 123
+
+server:
+  port: 8082
