--- a/SpringCloud-Swagger/pom.xml
+++ b/SpringCloud-Swagger/pom.xml
@@ -23,5 +23,17 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <!--第三方swagger UI-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.4</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
 </project>
