--- a/kafka/kafka-demo/pom.xml
+++ b/kafka/kafka-demo/pom.xml
@@ -16,6 +16,7 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>2.2.7.RELEASE</version>
         </dependency>
 
     </dependencies>
