--- a/kafka/kafka-demo/src/main/resources/application.yml
+++ b/kafka/kafka-demo/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   kafka:
-    bootstrap-servers: 127.0.0.1:9092,127.0.0.2:9092,127.0.0.3:9092
+    bootstrap-servers: localhost:9092
 
     producer:
       retries: 0
