--- a/SpringCloud-SpringBoot/src/main/resources/application.yml
+++ b/SpringCloud-SpringBoot/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+    tomcat:
+        uri-encoding: UTF-8
+    servlet:
+        context-path: /
 spring:
     profiles: #定义环境
         active: test
