--- a/sleuth/service-miya/pom.xml
+++ b/sleuth/service-miya/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-sleuth</artifactId>
-            <version>2.1.2.RELEASE</version>
+<!--            <version>2.1.2.RELEASE</version>-->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
-            <version>2.1.2.RELEASE</version>
+<!--            <version>2.1.2.RELEASE</version>-->
         </dependency>
     </dependencies>
 
