--- a/hystrix/hystrix-ribbon-consumer/pom.xml
+++ b/hystrix/hystrix-ribbon-consumer/pom.xml
@@ -27,9 +27,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-javanica</artifactId>
+            <version>1.5.18</version>
         </dependency>
+
     </dependencies>
 </project>
