--- a/SpringCloud-Database/src/main/resources/application.yml
+++ b/SpringCloud-Database/src/main/resources/application.yml
@@ -44,7 +44,7 @@ spring:
   #      connectionProperties:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     #控制台打印sql
     show-sql: true
   devtools:
@@ -61,3 +61,20 @@ mvc:
   view: #jsp
     prefix: /WEB-INF/jsp/
     suffix: .jsp
+
+#日志级别
+logging:
+  level:
+    root: WARN
+    com:
+      xujian:
+        database:
+          mapper: TRACE
+#-------------数据库---------------
+#分页
+pagehelper:
+  autoDialect: true
+  closeConn: true
+  hello: \u4F60\u597D
+  nihao: Hello
+  offset-as-page-num: false
