security 无意义，仅供参考

--- a/SpringCloud-SpringBoot/src/main/resources/application-dev.yml
+++ b/SpringCloud-SpringBoot/src/main/resources/application-dev.yml
@@ -17,4 +17,4 @@ spring:
       max-file-size: 200MB
       max-request-size: 200MB
 #  thymeleaf:
-#    prefix: classpath:/templates
+#    prefix: classpath:/static
