--- a/oauth/spring-security/pom.xml
+++ b/oauth/spring-security/pom.xml
@@ -29,5 +29,12 @@
             <version>3.7</version>
         </dependency>
 
+        <!--生成图形验证码-->
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-config</artifactId>
+            <version>1.1.6.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
