--- a/SpringCloud-Thinking/pom.xml
+++ b/SpringCloud-Thinking/pom.xml
@@ -14,6 +14,19 @@
     <name>spring-cloud-thread</name>
 
     <dependencies>
+        <!--guava-->
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.0-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
 </project>
